name:                bf
version:             0.1.0.0
synopsis:            compile bf
-- description:
homepage:            https://github.com/chessai/bf
license:             BSD3
license-file:        LICENSE
author:              chessai
maintainer:          chessai1996@gmail.com
-- copyright:
-- category:
build-type:          Simple
extra-source-files:  CHANGELOG.md
cabal-version:       >=1.10

executable bf
  main-is:             Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.7 && <4.15, primitive >= 0.6.4.0, transformers, mtl, primitive-atomic, megaparsec, unix, temporary, optparse-applicative
  hs-source-dirs:      src
  default-language:    Haskell2010
--  ghc-options: -ddump-simpl -fforce-recomp -dsuppress-all -fno-worker-wrapper
